=== 0.3.4 / 2017-08-27

* Updated rserve_talk_spec to latest rspec
* Deleted Gemfile.lock (545ch4 idea). Starting process to deprecate ruby 1.9
* Corrected deprecation of Fixnum : https://github.com/545ch4/Rserve-Ruby-client/commit/ab27f5ccd95ed58dd325a0e073649f6b9b1b0727
* Removes unsafe require from gemspec : https://github.com/apptopia/Rserve-Ruby-client/commit/506b06d6c27e3d2a5302a8c2ffd17436ce4d36ad 
=== 0.3.3 / 2017-07-06

* Added support for crypt and plaintext authentication 

=== 0.3.2 / 2017-05-17

* Updated Gemfile
* Fixed bug 26: Error handling NA values on integer matrix

=== 0.3.1 / 2013-07-26

* 2D Names functionality for Arrays and Matrices
* A bug that occurs when R returns a named array consisting of only 1
* Added code to handle Infinity values from double
* Added functionality to recognize 2D named objects
* Added specs for infinite? method
* Added support for cases when only one dimension of names is specified
* Bugfix: undefined method 'new' for #<Rserve::Protocol::REXPFactory
* Fix for raw expressions transfer error.Padding to size divisible by 4 was not being done.
* Fixed bug for named numerics
* Fixed failing specs, split new functionality between With2DNames (applied to Array and Matrix) and With2DSizes (only applied to Array)
* Fixed named_2d? not returning booleans
* Fixed starting of Rserve when running on JRuby
* Fixed starting of server inside Rserve::Connection when running on JRuby
* Incorrect Handling of infinite values
* Make row_by_name and column_by_name return named arrays
* No method exception when converting a "named Float" to ruby
* Raw expression transfer to rserve error.
* eval Exception is not caused by voidEval


=== 0.3.0 / 2011-12-26

* Added some extra documentation
* Double#to_double return nils for NA values 
* Make Rserve exceptions subclass StandardError instead of exception, so they can be rescued by `rescue` blocks. [Jamison Dance]  