@@ -1,3 +1,6 @@
+=== unreleased
+* Remove usage of Fixnum, since this class is removed in ruby 3.2
+
 === 0.3.4 / 2017-08-27
 
 * Updated rserve_talk_spec to latest rspec
